# marketplace

./: .gitignore  README.md  pyproject.toml  requirements.txt
Marketplace/.obsidian/: graph.json  workspace.json
Marketplace/Financial reports/: Balance sheet Q1.md  Cash flow Q1.md  Income statement Q1.md
Marketplace/Manual/: Costcutter.md  Finance.md  Innovator.md  Markets.md  Mercedes.md  Segments.md  State of PC industry.md  Traveler.md  Workhorse.md
Marketplace/Quarter decisions/: Quarter 1.md  Quarter 2.md
marketplace_assistant/: __init__.py  cli.py  db.py
marketplace_assistant/dashboard/: __init__.py  streamlit_app.py
marketplace_assistant/loaders/: __init__.py  loader.py
marketplace_assistant/parsers/: financial.py  manufacturing.py  marketing.py
